--- a/prototype/package.json
+++ b/prototype/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "fabric-ca-client": "^2.2.6",
-    "fabric-network": "^2.2.6"
+    "fabric-network": "^2.2.6",
+    "module": "^1.2.5",
+    "node": "^18.7.0"
   }
 }
